# comment-picker

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: .env.example  Dockerfile  app_runner.template.yaml  ecr.template.yaml  pyproject.toml  ruff.toml
backend/app/: main.py
backend/app/routers/: csv.py
backend/app/services/: csv_service.py
backend/fastapi-app/: Dockerfile  requirements.txt  temp_comment_picker.db  test_comments.csv
backend/fastapi-app/app/: config.py  database.py  main.py
backend/fastapi-app/app/models/: comment_models.py
backend/fastapi-app/app/routers/: comments.py
backend/fastapi-app/app/schemas/: comment_schemas.py
backend/fastapi-app/app/services/: bedrock_service.py  comment_analysis_service.py
data/: day1_アンケート.csv  day2_アンケート.csv  day3_アンケート.csv
documents/: manual.md  technical_docs.txt  user_requirements.md  user_story.md
frontend/: Dockerfile  README.md  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: AlertChecker.tsx  AlertSettings.tsx  AnalysisResults.tsx  App.css  App.tsx  CSVUploader.tsx  CSVViewer.tsx  CommentReport.tsx  TopComments.tsx
notebooks/: experiment.ipynb
