[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pandas>=2.2.3",
    "pydantic-ai>=0.2.15",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "openpyxl>=3.1.5",
    "boto3>=1.38.0",
]
